# chota-tinker

./: .gitignore  README.md  benchmark_fast_eval_from_dataset.py  checkpoint.py  collect_early_termination.py  collect_trajectories.py  collect_trajectories_budget_forcing.py  collect_trajectories_rsa.py  collect_trajectories_single_turn.py  collect_trajectories_single_turn_tinker.py  collect_trajectories_tinker.py  create_checkpoint.py  create_code_dataset.py  eval.py  eval_checkpoint_multi_turn.py  eval_checkpoint_single_turn.py  gem_math_demo.py  gem_math_demo_budget_forcing.py  gem_math_demo_early_termination.py  gem_math_demo_rsa.py  gem_math_demo_single_turn.py  gpu_idle.py  ifeval.py  intellect_env.py  intellect_env_README.md  merge_datasets.py  plot_best_of_k.py  prepare_lcb_dataset.py  push_top_hardest_to_hub.py  pyproject.toml  query_models.py  requirements.txt  sample_api.py  sample_fast.py  sample_one.py  score_hf_dataset.py  setup.sh  submit.sh  submit_single_turn.sh  submit_torch.sh  (+2 more)
chota_tinker/: __init__.py  client.py  losses.py  rl_utils.py  training.py  types.py
code_env/: .dockerignore  Dockerfile  README.md  pyproject.toml
code_env/code_env/: __init__.py  code_env.py
code_env/code_env/utils/: data_utils.py  deepcoder_utils.py  sandbox_pool.py  sandbox_utils.py  verification_utils.py
tests/: benchmark_exec_methods.py  benchmark_fast_eval_from_dataset.py  benchmark_interaction_throughput.py  test_eval_parity.py
trajectory_viewer/: app.py  requirements.txt
utils/: README.md  __init__.py  answer.py  fast_eval.py  gpu_keepalive.py  pass_at_k.py  (+2 more)
(+2 files in other folders)
